--- a/src/assets/stylesheets/componentStyles/adminpanel.scss
+++ b/src/assets/stylesheets/componentStyles/adminpanel.scss
@@ -52,7 +52,7 @@
       &-Upload {
         padding: 6px 23px 6px 23px;
         color: $uploadTextColor;
-        border: 0.5px solid #005EEC;
+        border: 0.5px solid #005eec;
         background: #fff;
       }
     }
