--- a/src/assets/stylesheets/_settings.scss
+++ b/src/assets/stylesheets/_settings.scss
@@ -1,30 +1,29 @@
 // General Colors
 
-$primaryColor: #0063F7;
-$SecondaryColor: #FFFFFF;
-$general-bg: #EDF4FF;
+$primaryColor: #0063f7;
+$SecondaryColor: #ffffff;
+$general-bg: #edf4ff;
 
 // Alert Colors
 
-$AlertMedium: #FB8500;
-$AlertCritical: #EF233C;
-$AlertSuccess: #06D6A0;
+$AlertMedium: #fb8500;
+$AlertCritical: #ef233c;
+$AlertSuccess: #06d6a0;
 
 // Shades from $SecondaryColor to $PrimaryColor (Order: Light to Dark)
 
-$Shade_0: #EDF4FF;
-$Shade_1: #C9DEFF;
-$Shade_2: #97C1FF;
-$Shade_3: #6EA6FF;
-$Shade_4: #418CFF;
-$Shade_5: #0062FF;
-$Shade_6: #054ADA;
-$Shade_7: #0530AD;
-$Shade_8: #061F80;
+$Shade_0: #edf4ff;
+$Shade_1: #c9deff;
+$Shade_2: #97c1ff;
+$Shade_3: #6ea6ff;
+$Shade_4: #418cff;
+$Shade_5: #0062ff;
+$Shade_6: #054ada;
+$Shade_7: #0530ad;
+$Shade_8: #061f80;
 $Shade_9: #051243;
 $Shade_10: #000000;
 
 //Text-Colors
 
-$uploadTextColor: #004FC4;
-
+$uploadTextColor: #004fc4;
