--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 // imports
 
@@ -11,5 +16,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 // global
 
 body {
-  background: #EDF4FF !important;
+  background: #edf4ff !important;
 }
