--- a/src/assets/stylesheets/componentStyles/dashboardStyle/_dashboard.scss
+++ b/src/assets/stylesheets/componentStyles/dashboardStyle/_dashboard.scss
@@ -1,11 +1,11 @@
-.bg-gray{
-  background-color: #EFF1F3;
+.bg-gray {
+  background-color: #eff1f3;
   padding: 30px 0 5px;
 }
-.bottom_bx{
+.bottom_bx {
   margin-top: 20px;
 }
-.main-content {  
+.main-content {
   .ctm-container {
     max-width: 90%;
     .card-chart {
