--- a/src/app/Modules/dashboard/pages/sites/sites.component.html
+++ b/src/app/Modules/dashboard/pages/sites/sites.component.html
@@ -1,62 +1,84 @@
 <div class="row ctm-row">
-    <div class="col-xl-3 col-lg-5 col-md-6 col-sm-7 ctm-cols" *ngFor="let site of sites">
-          <div class="card card-stats" (click)="onSelectCard(site.id)" [ngClass]="{'card-selected mat-elevation-z4': selected == site.id }">
-              <div class="card-header card-header-warning card-header-icon card-header-bg" style="background-image:url('../../../../../assets/AdminPanel/card-header-bg.png')">
-                  <h3 class="card-title">{{site.title}}</h3>
-                  <div *ngIf="site.status == 1" class="alert-bx">ALERT</div>
-                  <div *ngIf="site.status == 0" class="success-bx">HEALTHY</div>
-              </div>
-              <div class="card-body card-body-bx">
-                  <div class="row">
-                      <div class="col-lg-6 col-sm-6 col-xs-12">
-                          <div class="service-bx">
-                              <div class="card-icon">
-                                  <img src="assets/AdminPanel/device.svg">
-                              </div>
-                              <div class="card-category">
-                                  <p class="">{{site.devices}} Devices
-                                      <span>10 Unprovisioned</span>
-                                  </p>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-6 col-sm-6 col-xs-12">
-                          <div class="service-bx">
-                              <div class="card-icon">
-                                  <img src="assets/AdminPanel/slices.svg">
-                              </div>
-                              <div class="card-category">
-                                  <p class="">{{site.slices}} Slices</p>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-6 col-sm-6 col-xs-12">
-                          <div class="service-bx">
-                              <div class="card-icon">
-                                  <img src="assets/AdminPanel/service.svg">
-                              </div>
-                              <div class="card-category">
-                                  <p class="">{{site.services}} Services</p>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-6 col-sm-6 col-xs-12">
-                          <div class="service-bx">
-                              <div class="card-icon">
-                                  <img *ngIf="site.status == 1" src="assets/AdminPanel/red-alert.svg">
-                                  <img *ngIf="site.status == 0" src="assets/AdminPanel/alert.svg">
-                              </div>
-                              <div class="card-category">
-                                  <p class="">{{site.alerts}} Alerts</p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="check-box-container">
-                      <img *ngIf="selected != site.id" src="assets/AdminPanel/select.svg">
-                      <img *ngIf="selected == site.id" src="assets/AdminPanel/selected-card.svg">
-                  </div>
-              </div>
-          </div>
+  <div
+    class="col-xl-3 col-lg-5 col-md-6 col-sm-7 ctm-cols"
+    *ngFor="let site of sites"
+  >
+    <div
+      class="card card-stats"
+      (click)="onSelectCard(site.id)"
+      [ngClass]="{ 'card-selected mat-elevation-z4': selected == site.id }"
+    >
+      <div
+        class="card-header card-header-warning card-header-icon card-header-bg"
+        style="
+          background-image: url('../../../../../assets/AdminPanel/card-header-bg.png');
+        "
+      >
+        <h3 class="card-title">{{ site.title }}</h3>
+        <div *ngIf="site.status == 1" class="alert-bx">ALERT</div>
+        <div *ngIf="site.status == 0" class="success-bx">HEALTHY</div>
       </div>
+      <div class="card-body card-body-bx">
+        <div class="row">
+          <div class="col-lg-6 col-sm-6 col-xs-12">
+            <div class="service-bx">
+              <div class="card-icon">
+                <img src="assets/AdminPanel/device.svg" />
+              </div>
+              <div class="card-category">
+                <p class="">
+                  {{ site.devices }} Devices
+                  <span>10 Unprovisioned</span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-6 col-xs-12">
+            <div class="service-bx">
+              <div class="card-icon">
+                <img src="assets/AdminPanel/slices.svg" />
+              </div>
+              <div class="card-category">
+                <p class="">{{ site.slices }} Slices</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-6 col-xs-12">
+            <div class="service-bx">
+              <div class="card-icon">
+                <img src="assets/AdminPanel/service.svg" />
+              </div>
+              <div class="card-category">
+                <p class="">{{ site.services }} Services</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-6 col-xs-12">
+            <div class="service-bx">
+              <div class="card-icon">
+                <img
+                  *ngIf="site.status == 1"
+                  src="assets/AdminPanel/red-alert.svg"
+                />
+                <img
+                  *ngIf="site.status == 0"
+                  src="assets/AdminPanel/alert.svg"
+                />
+              </div>
+              <div class="card-category">
+                <p class="">{{ site.alerts }} Alerts</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="check-box-container">
+          <img *ngIf="selected != site.id" src="assets/AdminPanel/select.svg" />
+          <img
+            *ngIf="selected == site.id"
+            src="assets/AdminPanel/selected-card.svg"
+          />
+        </div>
+      </div>
+    </div>
   </div>
+</div>
