--- a/src/app/Modules/settings/admin/admin.component.html
+++ b/src/app/Modules/settings/admin/admin.component.html
@@ -6,11 +6,7 @@
     <app-side-navbar></app-side-navbar>
   </div>
   <div
-    class="
-      col
-      container-fluid
-      col-xxl col-xl-9 col-lg-8 col-md-7 col-sm-6 col-5
-    "
+    class="col container-fluid col-xxl col-xl-9 col-lg-8 col-md-7 col-sm-6 col-5"
   >
     <div class="admin-addUser-holder col-12 mx-3 useerPanel">
       <form [formGroup]="userForm">
@@ -148,10 +144,7 @@
                             Device
                           </mat-checkbox>
                           <mat-checkbox
-                            class="
-                              admin-addNew-form-subChecks
-                              admin-addNew-form-subChecks-central
-                            "
+                            class="admin-addNew-form-subChecks admin-addNew-form-subChecks-central"
                           >
                             Central
                           </mat-checkbox>
@@ -163,10 +156,7 @@
                             Site Equipment
                           </mat-checkbox>
                           <mat-checkbox
-                            class="
-                              admin-addNew-form-subChecks
-                              admin-addNew-form-subChecks-security
-                            "
+                            class="admin-addNew-form-subChecks admin-addNew-form-subChecks-security"
                           >
                             Security
                           </mat-checkbox>
@@ -474,10 +464,7 @@
                                   Device
                                 </mat-checkbox>
                                 <mat-checkbox
-                                  class="
-                                    admin-addNew-form-subChecks
-                                    admin-addNew-form-subChecks-central
-                                  "
+                                  class="admin-addNew-form-subChecks admin-addNew-form-subChecks-central"
                                 >
                                   Central
                                 </mat-checkbox>
@@ -491,10 +478,7 @@
                                   Site Equipment
                                 </mat-checkbox>
                                 <mat-checkbox
-                                  class="
-                                    admin-addNew-form-subChecks
-                                    admin-addNew-form-subChecks-security
-                                  "
+                                  class="admin-addNew-form-subChecks admin-addNew-form-subChecks-security"
                                 >
                                   Security
                                 </mat-checkbox>
