--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -40,12 +40,7 @@
             src="../../assets/Navbar/search-in-box.svg"
           />
           <input
-            class="
-              form-control
-              me-2
-              aether-SearchBox aether-SearchBox-bgColor
-              pb-2
-            "
+            class="form-control me-2 aether-SearchBox aether-SearchBox-bgColor pb-2"
             type="search"
             placeholder="Search"
             aria-label="Search"
