--- a/src/assets/stylesheets/componentStyles/device-sim.scss
+++ b/src/assets/stylesheets/componentStyles/device-sim.scss
@@ -383,7 +383,7 @@
       margin-bottom: 15px;
       align-items: center;
       .title {
-        color: #3C4257;
+        color: #3c4257;
         font-family: Inter;
         font-style: normal;
         font-weight: 500;
