--- a/src/assets/stylesheets/componentStyles/select-sims.scss
+++ b/src/assets/stylesheets/componentStyles/select-sims.scss
@@ -18,7 +18,7 @@
     line-height: 150%;
     text-align: right;
     color: #ef233c;
-    margin-left: -1rem;;
+    margin-left: -1rem;
   }
 
   &-container {
@@ -26,7 +26,7 @@
     border-radius: 6px;
     flex-wrap: wrap;
     width: 40rem;
-    background: #F0F3FA;
+    background: #f0f3fa;
 
     &-spacings {
       padding: 10px;
@@ -36,7 +36,7 @@
       cursor: pointer;
       border: 1px solid transparent;
       border-radius: 4px;
-      background-color: #FFFFFF;
+      background-color: #ffffff;
       padding: 10px 30px 10px 10px;
     }
   }
@@ -47,18 +47,18 @@
 
     &-cancel {
       padding: 12px 60px 12px 12px;
-      border: 1px solid #0063F7;
+      border: 1px solid #0063f7;
       border-radius: 4px;
-      color: #0063F7;
-      background: #FFFFFF;
+      color: #0063f7;
+      background: #ffffff;
     }
 
     &-select {
-      color: #FFFFFF;
+      color: #ffffff;
       border: transparent;
       border-radius: 4px;
       padding: 13px 60px 13px 12px;
-      background: #0063F7;
+      background: #0063f7;
     }
   }
 }
