--- a/src/app/Modules/settings/admin/admin.component.html
+++ b/src/app/Modules/settings/admin/admin.component.html
@@ -3,10 +3,14 @@
 <!-- <h3>Admin panel works..</h3> -->
 <div class="row container-fluid my-5">
   <div class="col-2 mx-4">
-    <app-side-navbar></app-side-navbar>
+    <aep-side-navbar></aep-side-navbar>
   </div>
   <div
-    class="col container-fluid col-xxl col-xl-9 col-lg-8 col-md-7 col-sm-6 col-5"
+    class="
+      col
+      container-fluid
+      col-xxl col-xl-9 col-lg-8 col-md-7 col-sm-6 col-5
+    "
   >
     <div class="admin-addUser-holder col-12 mx-3 useerPanel">
       <form [formGroup]="userForm">
@@ -144,7 +148,10 @@
                             Device
                           </mat-checkbox>
                           <mat-checkbox
-                            class="admin-addNew-form-subChecks admin-addNew-form-subChecks-central"
+                            class="
+                              admin-addNew-form-subChecks
+                              admin-addNew-form-subChecks-central
+                            "
                           >
                             Central
                           </mat-checkbox>
@@ -156,7 +163,10 @@
                             Site Equipment
                           </mat-checkbox>
                           <mat-checkbox
-                            class="admin-addNew-form-subChecks admin-addNew-form-subChecks-security"
+                            class="
+                              admin-addNew-form-subChecks
+                              admin-addNew-form-subChecks-security
+                            "
                           >
                             Security
                           </mat-checkbox>
@@ -213,14 +223,14 @@
               <button
                 class="admin-usersites-switch"
                 (click)="siteView()"
-                [ngClass]="siteViewStyle == 'true' ? 'highlight' : 'normal'"
+                [ngClass]="siteViewStyle === 'true' ? 'highlight' : 'normal'"
               >
                 Site
               </button>
               <button
                 class="admin-usersites-switch"
                 (click)="userView()"
-                [ngClass]="userViewStyle == 'true' ? 'highlight' : 'normal'"
+                [ngClass]="userViewStyle === 'true' ? 'highlight' : 'normal'"
               >
                 User
               </button>
@@ -267,27 +277,27 @@
                     *ngFor="let city of user.cities"
                   >
                     <img
-                      *ngIf="city.name == 'Fremont, CA'"
+                      *ngIf="city.name === 'Fremont, CA'"
                       class="admin-users-card-city-image"
                       src="../../assets/AdminPanel/fremont.svg"
                     />
                     <img
-                      *ngIf="city.name == 'Bengaluru, IN'"
+                      *ngIf="city.name === 'Bengaluru, IN'"
                       class="admin-users-card-city-image"
                       src="../../assets/AdminPanel/berlin.svg"
                     />
                     <img
-                      *ngIf="city.name == 'NYC, NY'"
+                      *ngIf="city.name === 'NYC, NY'"
                       class="admin-users-card-city-image"
                       src="../../assets/AdminPanel/nyc.svg"
                     />
                     <img
-                      *ngIf="city.name == 'Austin, TX'"
+                      *ngIf="city.name === 'Austin, TX'"
                       class="admin-users-card-city-image"
                       src="../../assets/AdminPanel/austin.svg"
                     />
                     <img
-                      *ngIf="city.name == 'Berlin, DE'"
+                      *ngIf="city.name === 'Berlin, DE'"
                       class="admin-users-card-city-image"
                       src="../../assets/AdminPanel/berlin.svg"
                     />
@@ -464,7 +474,10 @@
                                   Device
                                 </mat-checkbox>
                                 <mat-checkbox
-                                  class="admin-addNew-form-subChecks admin-addNew-form-subChecks-central"
+                                  class="
+                                    admin-addNew-form-subChecks
+                                    admin-addNew-form-subChecks-central
+                                  "
                                 >
                                   Central
                                 </mat-checkbox>
@@ -478,7 +491,10 @@
                                   Site Equipment
                                 </mat-checkbox>
                                 <mat-checkbox
-                                  class="admin-addNew-form-subChecks admin-addNew-form-subChecks-security"
+                                  class="
+                                    admin-addNew-form-subChecks
+                                    admin-addNew-form-subChecks-security
+                                  "
                                 >
                                   Security
                                 </mat-checkbox>
