--- a/src/app/side-navbar/side-navbar.component.html
+++ b/src/app/side-navbar/side-navbar.component.html
@@ -308,7 +308,7 @@
       [ngClass]="{
         sideNavbar_optionStyling_active:
           menuIcons.audit.auditString === menuIcons.audit.auditActive ||
-          router.url == '/sidenavbar',
+          router.url === '/sidenavbar',
         sideNavbar_optionStyling_inactive:
           menuIcons.audit.auditString === menuIcons.audit.auditInactive
       }"
@@ -321,14 +321,14 @@
           [ngStyle]="{
             'background-color':
               menuIcons.audit.auditString === menuIcons.audit.auditActive ||
-              router.url == '/sidenavbar'
+              router.url === '/sidenavbar'
                 ? '#0063F7'
                 : '#EDF4FF'
           }"
         >
           <img
             [src]="
-              router.url == '/sidenavbar'
+              router.url === '/sidenavbar'
                 ? menuIcons.audit.auditActive
                 : menuIcons.audit.auditString
             "
