--- a/src/app/Modules/dashboard/pages/sites/sites.component.html
+++ b/src/app/Modules/dashboard/pages/sites/sites.component.html
@@ -6,7 +6,7 @@
     <div
       class="card card-stats"
       (click)="onSelectCard(site.id)"
-      [ngClass]="{ 'card-selected mat-elevation-z4': selected == site.id }"
+      [ngClass]="{ 'card-selected mat-elevation-z4': selected === site.id }"
     >
       <div
         class="card-header card-header-warning card-header-icon card-header-bg"
@@ -15,8 +15,8 @@
         "
       >
         <h3 class="card-title">{{ site.title }}</h3>
-        <div *ngIf="site.status == 1" class="alert-bx">ALERT</div>
-        <div *ngIf="site.status == 0" class="success-bx">HEALTHY</div>
+        <div *ngIf="site.status === 1" class="alert-bx">ALERT</div>
+        <div *ngIf="site.status === 0" class="success-bx">HEALTHY</div>
       </div>
       <div class="card-body card-body-bx">
         <div class="row">
@@ -57,11 +57,11 @@
             <div class="service-bx">
               <div class="card-icon">
                 <img
-                  *ngIf="site.status == 1"
+                  *ngIf="site.status === 1"
                   src="assets/AdminPanel/red-alert.svg"
                 />
                 <img
-                  *ngIf="site.status == 0"
+                  *ngIf="site.status === 0"
                   src="assets/AdminPanel/alert.svg"
                 />
               </div>
@@ -72,9 +72,12 @@
           </div>
         </div>
         <div class="check-box-container">
-          <img *ngIf="selected != site.id" src="assets/AdminPanel/select.svg" />
           <img
-            *ngIf="selected == site.id"
+            *ngIf="selected !== site.id"
+            src="assets/AdminPanel/select.svg"
+          />
+          <img
+            *ngIf="selected === site.id"
             src="assets/AdminPanel/selected-card.svg"
           />
         </div>
