--- a/src/app/Modules/dashboard/pages/slices/slices.component.html
+++ b/src/app/Modules/dashboard/pages/slices/slices.component.html
@@ -20,7 +20,7 @@
       >
         <mat-expansion-panel-header
           class="pannel-header-bx"
-          [hidden]="expandId == slice.id || isExpand"
+          [hidden]="expandId === slice.id || isExpand"
         >
           <div class="left-icon" (click)="$event.stopPropagation()">
             <img src="assets/AdminPanel/union.svg" />
@@ -66,15 +66,17 @@
                     </div>
                     <div
                       class="graph-alert-h"
-                      [ngClass]="slice.status == '1' ? 'text-red' : 'text-blue'"
+                      [ngClass]="
+                        slice.status === '1' ? 'text-red' : 'text-blue'
+                      "
                     >
                       <div class="card-icon">
                         <img
-                          *ngIf="slice.status == 1"
+                          *ngIf="slice.status === 1"
                           src="assets/AdminPanel/red-alert.svg"
                         />
                         <img
-                          *ngIf="slice.status == 0"
+                          *ngIf="slice.status === 0"
                           src="assets/AdminPanel/danger.svg"
                         />
                       </div>
@@ -236,21 +238,21 @@
               <div class="functionality-bx">
                 <div
                   class="edit-bx"
-                  *ngIf="!isEditable && sliceId == slice.id"
+                  *ngIf="!isEditable && sliceId === slice.id"
                   (click)="onEdit(slice.id)"
                 >
                   <img src="assets/AdminPanel/edit.svg" /> Edit
                 </div>
                 <div
                   class="edit-bx"
-                  *ngIf="sliceId != slice.id"
+                  *ngIf="sliceId !== slice.id"
                   (click)="onEdit(slice.id)"
                 >
                   <img src="assets/AdminPanel/edit.svg" /> Edit
                 </div>
                 <div
                   class="cancel-bx"
-                  *ngIf="isEditable && sliceId == slice.id"
+                  *ngIf="isEditable && sliceId === slice.id"
                   (click)="isEditable = !isEditable"
                 >
                   Cancel
@@ -277,12 +279,12 @@
                       class="accordion-button"
                       type="button"
                       [ngClass]="
-                        device.status == openAccordion[deviceIndex]
+                        device.status === openAccordion[deviceIndex]
                           ? 'hiden'
                           : 'collapsed'
                       "
                       [style.justify-content]="
-                        isEditable && sliceId == slice.id
+                        isEditable && sliceId === slice.id
                           ? 'space-between'
                           : 'center'
                       "
@@ -304,18 +306,18 @@
                         {{ device.title }}
                         <div class="red-ellipse">
                           <img
-                            *ngIf="device.status == 1"
+                            *ngIf="device.status === 1"
                             src="assets/AdminPanel/Ellipse-red.svg"
                           />
                           <img
-                            *ngIf="device.status == 0"
+                            *ngIf="device.status === 0"
                             src="assets/AdminPanel/Ellipse.svg"
                           />
                         </div>
                       </div>
                       <div
                         class="services_right_bx"
-                        *ngIf="isEditable && sliceId == slice.id"
+                        *ngIf="isEditable && sliceId === slice.id"
                       >
                         <a class="add_btn">Add</a>
                         <a class="remove_btn" (click)="openDialog(deviceIndex)"
@@ -328,7 +330,7 @@
                     [attr.id]="'collapse' + deviceIndex"
                     class="accordion-collapse collapse"
                     [class.show]="openAccordion[deviceIndex]"
-                    [ngClass]="device.status == '1' ? 'show' : 'hidden'"
+                    [ngClass]="device.status === '1' ? 'show' : 'hidden'"
                     [attr.aria-labelledby]="'heading' + deviceIndex"
                     data-bs-parent="#accordionExample"
                   >
@@ -344,8 +346,8 @@
                           <div
                             class="product-detail"
                             *ngIf="
-                              removedCameraId == camera.id &&
-                              removedDeviceId == device.id
+                              removedCameraId === camera.id &&
+                              removedDeviceId === device.id
                             "
                           >
                             <div class="removed_heading">
@@ -356,18 +358,18 @@
                           <div
                             class="product-detail"
                             *ngIf="
-                              removedCameraId != camera.id ||
-                              removedDeviceId != device.id
+                              removedCameraId !== camera.id ||
+                              removedDeviceId !== device.id
                             "
                           >
                             <div class="left-bx">
                               <img
-                                *ngIf="!isEditable || sliceId != slice.id"
+                                *ngIf="!isEditable || sliceId !== slice.id"
                                 src="assets/AdminPanel/camera.svg"
                                 class="camera_icon"
                               />
                               <img
-                                *ngIf="isEditable && sliceId == slice.id"
+                                *ngIf="isEditable && sliceId === slice.id"
                                 src="assets/AdminPanel/remove.svg"
                                 class="remove-icon"
                                 (click)="
@@ -385,11 +387,11 @@
                               <p>Location</p>
                               <div class="red-ellipse">
                                 <img
-                                  *ngIf="camera.status == 1"
+                                  *ngIf="camera.status === 1"
                                   src="assets/AdminPanel/Ellipse-red.svg"
                                 />
                                 <img
-                                  *ngIf="camera.status == 0"
+                                  *ngIf="camera.status === 0"
                                   src="assets/AdminPanel/Ellipse.svg"
                                 />
                               </div>
@@ -579,7 +581,7 @@
                       aria-expanded="true"
                       [attr.aria-controls]="'collapse' + serviceIndex"
                       [ngClass]="
-                        service.status == openAccordionRight[serviceIndex]
+                        service.status === openAccordionRight[serviceIndex]
                           ? 'hiden'
                           : 'collapsed'
                       "
@@ -590,11 +592,11 @@
                       {{ service.tittle }}
                       <div class="red-ellipse">
                         <img
-                          *ngIf="service.status == 1"
+                          *ngIf="service.status === 1"
                           src="assets/AdminPanel/Ellipse-red.svg"
                         />
                         <img
-                          *ngIf="service.status == 0"
+                          *ngIf="service.status === 0"
                           src="assets/AdminPanel/Ellipse.svg"
                         />
                       </div>
@@ -613,7 +615,7 @@
                     [attr.id]="'collapse' + serviceIndex"
                     class="accordion-collapse collapse"
                     [class.show]="openAccordionRight[serviceIndex]"
-                    [ngClass]="service.status == '1' ? 'show' : 'hidden'"
+                    [ngClass]="service.status === '1' ? 'show' : 'hidden'"
                     [attr.aria-labelledby]="'heading' + serviceIndex"
                     data-bs-parent="#accordionExample"
                   >
@@ -628,8 +630,8 @@
                         <div
                           class="removed_heading"
                           *ngIf="
-                            removedServiceGroupId == group.id &&
-                            removedServiceId == service.id
+                            removedServiceGroupId === group.id &&
+                            removedServiceId === service.id
                           "
                         >
                           <p>{{ group.title }} Removed</p>
@@ -638,17 +640,17 @@
                         <div
                           class="left-bx"
                           *ngIf="
-                            removedServiceGroupId != group.id ||
-                            removedServiceId != service.id
+                            removedServiceGroupId !== group.id ||
+                            removedServiceId !== service.id
                           "
                         >
                           <div class="card-icon">
                             <img
                               src="assets/AdminPanel/service.svg"
-                              *ngIf="!isEditable && sliceId != slice.id"
+                              *ngIf="!isEditable && sliceId !== slice.id"
                             />
                             <img
-                              *ngIf="isEditable && sliceId == slice.id"
+                              *ngIf="isEditable && sliceId === slice.id"
                               src="assets/AdminPanel/remove.svg"
                               class="remove-icon"
                               (click)="
@@ -666,8 +668,8 @@
                         <div
                           class="center-bx"
                           *ngIf="
-                            removedServiceGroupId != group.id ||
-                            removedServiceId != service.id
+                            removedServiceGroupId !== group.id ||
+                            removedServiceId !== service.id
                           "
                         >
                           <p>Location</p>
@@ -675,8 +677,8 @@
                         <div
                           class="right-bx"
                           *ngIf="
-                            removedServiceGroupId != group.id ||
-                            removedServiceId != service.id
+                            removedServiceGroupId !== group.id ||
+                            removedServiceId !== service.id
                           "
                         >
                           <div class="red-ellipse">
