--- a/src/app/Modules/settings/device-sim/device-sim.component.html
+++ b/src/app/Modules/settings/device-sim/device-sim.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <!--left side section-->
     <div class="col-3">
-      <app-side-navbar></app-side-navbar>
+      <aep-side-navbar></aep-side-navbar>
     </div>
     <!--RIGHT SIDE SECTION-->
     <div class="col-9 right-section">
@@ -12,27 +12,27 @@
           <div
             class="title-block device-sim-tab"
             (click)="simsView()"
-            [ngClass]="deviceSimView == 'true' ? 'active' : 'in-active'"
+            [ngClass]="deviceSimView === 'true' ? 'active' : 'in-active'"
           >
             Device + SIM
           </div>
           <div
             class="title-block inventory-tab"
             (click)="inventoryDeviceTab()"
-            [ngClass]="inventoryViewStyle == 'true' ? 'active' : 'in-active'"
+            [ngClass]="inventoryViewStyle === 'true' ? 'active' : 'in-active'"
           >
             Inventory
           </div>
           <div
             class="inventory-block"
-            [ngClass]="inventoryViewStyle == 'true' ? 'active' : 'in-active'"
+            [ngClass]="inventoryViewStyle === 'true' ? 'active' : 'in-active'"
           >
             <div class="mx-3 d-flex">
               <button
                 class="device-switch device-btn"
                 (click)="inventoryDeviceTab()"
                 [ngClass]="
-                  inventoryDeviceTabStyle == 'true' ? 'highlight' : 'normal'
+                  inventoryDeviceTabStyle === 'true' ? 'highlight' : 'normal'
                 "
               >
                 Device
@@ -41,7 +41,7 @@
                 class="sims-switch sims-btn"
                 (click)="inventorySimsTab()"
                 [ngClass]="
-                  inventorySimsTabStyle == 'true' ? 'highlight' : 'normal'
+                  inventorySimsTabStyle === 'true' ? 'highlight' : 'normal'
                 "
               >
                 Sims
@@ -51,7 +51,7 @@
           <div
             class="title-block cancelled-sims"
             (click)="cancelledSims()"
-            [ngClass]="cancelledSimsStyle == 'true' ? 'active' : 'in-active'"
+            [ngClass]="cancelledSimsStyle === 'true' ? 'active' : 'in-active'"
           >
             Cancelled SIMs
           </div>
@@ -198,7 +198,9 @@
                             >
                               Browse
                               <img
-                                class="activate-device-subtitle2-button-searchIcon"
+                                class="
+                                  activate-device-subtitle2-button-searchIcon
+                                "
                                 src="../../assets/deviceSim/search.svg"
                               />
                             </div>
@@ -240,7 +242,13 @@
         <!--device+sim view-->
         <div class="row">
           <mat-card
-            class="device-view device-sims-view col-12 d-flex my-1 device-sims-detail-card"
+            class="
+              device-view device-sims-view
+              col-12
+              d-flex
+              my-1
+              device-sims-detail-card
+            "
           >
             <div class="ng-tns-c119-0 vector">
               <div class="vector-bg">
@@ -271,9 +279,17 @@
               <div class="desc">Name</div>
             </div>
             <div
-              class="progress col mx-3 device-details-blocks device-progress-bar bg-light"
+              class="
+                progress
+                col
+                mx-3
+                device-details-blocks device-progress-bar
+                bg-light
+              "
               [ngClass]="
-                deviceSimsDetailItemDetailsPopUp == true ? 'v-hidden' : 'v-show'
+                deviceSimsDetailItemDetailsPopUp === true
+                  ? 'v-hidden'
+                  : 'v-show'
               "
             >
               <div class="progress-bar bg-success" style="width: 40%"></div>
@@ -285,7 +301,11 @@
             </div>
 
             <div
-              class="col-1 device-details device-sims-details ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details device-sims-details
+                ng-tns-c119-0 ng-star-inserted
+              "
               (click)="deviceSimsDetailItemDetailsPopUpFun()"
               *ngIf="!deviceSimsDetailItemDetailsPopUp"
             >
@@ -300,7 +320,11 @@
             </div>
 
             <div
-              class="col-1 device-details-view-edit device-sims-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit device-sims-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
               (click)="deviceSimsDetailViewEditFormFun()"
               *ngIf="!deviceSimsDetailViewEditForm"
             >
@@ -321,14 +345,24 @@
           </mat-card>
           <!--DEVICE SIMS DETAILS VIEW EDIT FORM-->
           <mat-card
-            class="active-new-device-form active-new-device-form device-sims-detail-view-edit-form forms-block"
+            class="
+              active-new-device-form active-new-device-form
+              device-sims-detail-view-edit-form
+              forms-block
+            "
             *ngIf="deviceSimsDetailViewEditForm"
             [@inOutAnimation]
           >
             <form [formGroup]="deviceSimFormGroup">
               <mat-card-content>
                 <div
-                  class="device-sims-detail-view-card-edit-form form-content my-4 mx-2 d-flex"
+                  class="
+                    device-sims-detail-view-card-edit-form
+                    form-content
+                    my-4
+                    mx-2
+                    d-flex
+                  "
                 >
                   <div class="row my-3">
                     <div class="row">
@@ -442,7 +476,9 @@
                             >
                               Browse
                               <img
-                                class="activate-device-subtitle2-button-searchIcon"
+                                class="
+                                  activate-device-subtitle2-button-searchIcon
+                                "
                                 src="../../assets/deviceSim/search.svg"
                               />
                             </div>
@@ -505,14 +541,24 @@
           <!--END DEVICE SIMS DETAILS VIEW EDIT FORM-->
           <!--DEVICE SIMS DETAILS VIEW ITEMS DETAILS BUTTON POP UP-->
           <mat-card
-            class="active-new-device-form active-new-device-form device-sims-detail-view-details-form forms-block"
+            class="
+              active-new-device-form active-new-device-form
+              device-sims-detail-view-details-form
+              forms-block
+            "
             *ngIf="deviceSimsDetailItemDetailsPopUp"
             [@inOutAnimation]
           >
             <form [formGroup]="deviceSimFormGroup">
               <mat-card-content>
                 <div
-                  class="device-sims-detail-view-details-card-form form-content my-4 mx-2 d-flex"
+                  class="
+                    device-sims-detail-view-details-card-form
+                    form-content
+                    my-4
+                    mx-2
+                    d-flex
+                  "
                 >
                   <div class="row my-3">
                     <div class="col-12 d-flex section-one">
@@ -522,7 +568,7 @@
                           class="one-day"
                           (click)="deviceSimsDetailsProgressToggleDayFun()"
                           [ngClass]="
-                            deviceSimsDetailsProgressToggleDay == true
+                            deviceSimsDetailsProgressToggleDay === true
                               ? 'active'
                               : 'in-active'
                           "
@@ -532,7 +578,7 @@
                           class="one-week"
                           (click)="deviceSimsDetailsProgressToggleWeekFun()"
                           [ngClass]="
-                            deviceSimsDetailsProgressToggleWeek == true
+                            deviceSimsDetailsProgressToggleWeek === true
                               ? 'active'
                               : 'in-active'
                           "
@@ -565,7 +611,11 @@
                       </div>
                       <div
                         id="1D"
-                        class="progress col device-details-blocks device-progress-bar"
+                        class="
+                          progress
+                          col
+                          device-details-blocks device-progress-bar
+                        "
                         *ngIf="deviceSimsDetailsProgressToggleDay"
                       >
                         <div
@@ -616,7 +666,11 @@
                       </div>
                       <div
                         id="1W"
-                        class="progress col device-details-blocks device-progress-bar"
+                        class="
+                          progress
+                          col
+                          device-details-blocks device-progress-bar
+                        "
                         *ngIf="deviceSimsDetailsProgressToggleWeek"
                       >
                         <div
@@ -711,7 +765,13 @@
           <!--END DEVICE SIMS DETAILS VIEW ITEMS DETAILS BUTTON POP UP-->
 
           <mat-card
-            class="device-view device-sims-view col-12 d-flex my-1 device-sims-detail-card"
+            class="
+              device-view device-sims-view
+              col-12
+              d-flex
+              my-1
+              device-sims-detail-card
+            "
           >
             <div class="ng-tns-c119-0 vector">
               <div class="vector-bg">
@@ -742,7 +802,12 @@
               <div class="desc">Name</div>
             </div>
             <div
-              class="progress col mx-3 device-details-blocks device-progress-bar"
+              class="
+                progress
+                col
+                mx-3
+                device-details-blocks device-progress-bar
+              "
             >
               <div class="progress-bar bg-success" style="width: 40%"></div>
               <div class="progress-bar" style="width: 10%"></div>
@@ -755,12 +820,20 @@
               <div>OFFLINE</div>
             </div>
             <div
-              class="col-1 device-details device-sims-details ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details device-sims-details
+                ng-tns-c119-0 ng-star-inserted
+              "
             >
               Details
             </div>
             <div
-              class="col-1 device-details-view-edit device-sims-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit device-sims-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
             >
               <img
                 src="../../assets/deviceSim/pencil.svg"
@@ -950,7 +1023,11 @@
             </div>
 
             <div
-              class="col-1 device-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
               (click)="inventoryDeviceEditFormFun()"
               *ngIf="!inventoryDeviceEditForm"
             >
@@ -961,7 +1038,12 @@
               Edit
             </div>
             <div
-              class="col-1 device-details-view-edit close ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit
+                close
+                ng-tns-c119-0 ng-star-inserted
+              "
               (click)="inventoryDeviceEditFormFunClose()"
               *ngIf="inventoryDeviceEditForm"
             >
@@ -1105,7 +1187,11 @@
             </div>
 
             <div
-              class="col-1 device-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
             >
               <img
                 src="../../assets/deviceSim/pencil.svg"
@@ -1145,7 +1231,11 @@
             </div>
 
             <div
-              class="col-1 device-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
             >
               <img
                 src="../../assets/deviceSim/pencil.svg"
