ng lint warnings cleared

--- a/src/app/Modules/dashboard/dashboard.component.html
+++ b/src/app/Modules/dashboard/dashboard.component.html
@@ -128,7 +128,7 @@
         </div>
         <aep-slices
           #slices
-          (informParent)="parentWillTakeActionSlice($event)"
+          (informParent)="parentWillTakeActionSlice()"
         ></aep-slices>
       </div>
     </div>
