--- a/src/app/Modules/dashboard/pages/slices/slices.component.html
+++ b/src/app/Modules/dashboard/pages/slices/slices.component.html
@@ -259,7 +259,7 @@
                 </div>
                 <div
                   class="minimise-bx"
-                  (click)="mapanel.close(); collapseSlice(slice.id)"
+                  (click)="mapanel.close(); collapseSlice()"
                 >
                   <img src="assets/AdminPanel/negative.svg" />
                 </div>
