--- a/src/app/Modules/settings/device-sim/device-sim.component.html
+++ b/src/app/Modules/settings/device-sim/device-sim.component.html
@@ -198,7 +198,9 @@
                             >
                               Browse
                               <img
-                                class="activate-device-subtitle2-button-searchIcon"
+                                class="
+                                  activate-device-subtitle2-button-searchIcon
+                                "
                                 src="../../assets/deviceSim/search.svg"
                               />
                             </div>
@@ -240,7 +242,13 @@
         <!--device+sim view-->
         <div class="row">
           <mat-card
-            class="device-view device-sims-view col-12 d-flex my-1 device-sims-detail-card"
+            class="
+              device-view device-sims-view
+              col-12
+              d-flex
+              my-1
+              device-sims-detail-card
+            "
           >
             <div class="ng-tns-c119-0 vector">
               <div class="vector-bg">
@@ -271,7 +279,13 @@
               <div class="desc">Name</div>
             </div>
             <div
-              class="progress col mx-3 device-details-blocks device-progress-bar bg-light"
+              class="
+                progress
+                col
+                mx-3
+                device-details-blocks device-progress-bar
+                bg-light
+              "
               [ngClass]="
                 deviceSimsDetailItemDetailsPopUp === true
                   ? 'v-hidden'
@@ -287,7 +301,11 @@
             </div>
 
             <div
-              class="col-1 device-details device-sims-details ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details device-sims-details
+                ng-tns-c119-0 ng-star-inserted
+              "
               (click)="deviceSimsDetailItemDetailsPopUpFun()"
               *ngIf="!deviceSimsDetailItemDetailsPopUp"
             >
@@ -302,7 +320,11 @@
             </div>
 
             <div
-              class="col-1 device-details-view-edit device-sims-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit device-sims-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
               (click)="deviceSimsDetailViewEditFormFun()"
               *ngIf="!deviceSimsDetailViewEditForm"
             >
@@ -323,14 +345,24 @@
           </mat-card>
           <!--DEVICE SIMS DETAILS VIEW EDIT FORM-->
           <mat-card
-            class="active-new-device-form active-new-device-form device-sims-detail-view-edit-form forms-block"
+            class="
+              active-new-device-form active-new-device-form
+              device-sims-detail-view-edit-form
+              forms-block
+            "
             *ngIf="deviceSimsDetailViewEditForm"
             [@inOutAnimation]
           >
             <form [formGroup]="deviceSimFormGroup">
               <mat-card-content>
                 <div
-                  class="device-sims-detail-view-card-edit-form form-content my-4 mx-2 d-flex"
+                  class="
+                    device-sims-detail-view-card-edit-form
+                    form-content
+                    my-4
+                    mx-2
+                    d-flex
+                  "
                 >
                   <div class="row my-3">
                     <div class="row">
@@ -444,7 +476,9 @@
                             >
                               Browse
                               <img
-                                class="activate-device-subtitle2-button-searchIcon"
+                                class="
+                                  activate-device-subtitle2-button-searchIcon
+                                "
                                 src="../../assets/deviceSim/search.svg"
                               />
                             </div>
@@ -507,14 +541,24 @@
           <!--END DEVICE SIMS DETAILS VIEW EDIT FORM-->
           <!--DEVICE SIMS DETAILS VIEW ITEMS DETAILS BUTTON POP UP-->
           <mat-card
-            class="active-new-device-form active-new-device-form device-sims-detail-view-details-form forms-block"
+            class="
+              active-new-device-form active-new-device-form
+              device-sims-detail-view-details-form
+              forms-block
+            "
             *ngIf="deviceSimsDetailItemDetailsPopUp"
             [@inOutAnimation]
           >
             <form [formGroup]="deviceSimFormGroup">
               <mat-card-content>
                 <div
-                  class="device-sims-detail-view-details-card-form form-content my-4 mx-2 d-flex"
+                  class="
+                    device-sims-detail-view-details-card-form
+                    form-content
+                    my-4
+                    mx-2
+                    d-flex
+                  "
                 >
                   <div class="row my-3">
                     <div class="col-12 d-flex section-one">
@@ -567,7 +611,11 @@
                       </div>
                       <div
                         id="1D"
-                        class="progress col device-details-blocks device-progress-bar"
+                        class="
+                          progress
+                          col
+                          device-details-blocks device-progress-bar
+                        "
                         *ngIf="deviceSimsDetailsProgressToggleDay"
                       >
                         <div
@@ -618,7 +666,11 @@
                       </div>
                       <div
                         id="1W"
-                        class="progress col device-details-blocks device-progress-bar"
+                        class="
+                          progress
+                          col
+                          device-details-blocks device-progress-bar
+                        "
                         *ngIf="deviceSimsDetailsProgressToggleWeek"
                       >
                         <div
@@ -713,7 +765,13 @@
           <!--END DEVICE SIMS DETAILS VIEW ITEMS DETAILS BUTTON POP UP-->
 
           <mat-card
-            class="device-view device-sims-view col-12 d-flex my-1 device-sims-detail-card"
+            class="
+              device-view device-sims-view
+              col-12
+              d-flex
+              my-1
+              device-sims-detail-card
+            "
           >
             <div class="ng-tns-c119-0 vector">
               <div class="vector-bg">
@@ -744,7 +802,12 @@
               <div class="desc">Name</div>
             </div>
             <div
-              class="progress col mx-3 device-details-blocks device-progress-bar"
+              class="
+                progress
+                col
+                mx-3
+                device-details-blocks device-progress-bar
+              "
             >
               <div class="progress-bar bg-success" style="width: 40%"></div>
               <div class="progress-bar" style="width: 10%"></div>
@@ -757,12 +820,20 @@
               <div>OFFLINE</div>
             </div>
             <div
-              class="col-1 device-details device-sims-details ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details device-sims-details
+                ng-tns-c119-0 ng-star-inserted
+              "
             >
               Details
             </div>
             <div
-              class="col-1 device-details-view-edit device-sims-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit device-sims-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
             >
               <img
                 src="../../assets/deviceSim/pencil.svg"
@@ -952,7 +1023,11 @@
             </div>
 
             <div
-              class="col-1 device-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
               (click)="inventoryDeviceEditFormFun()"
               *ngIf="!inventoryDeviceEditForm"
             >
@@ -963,7 +1038,12 @@
               Edit
             </div>
             <div
-              class="col-1 device-details-view-edit close ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit
+                close
+                ng-tns-c119-0 ng-star-inserted
+              "
               (click)="inventoryDeviceEditFormFunClose()"
               *ngIf="inventoryDeviceEditForm"
             >
@@ -1107,7 +1187,11 @@
             </div>
 
             <div
-              class="col-1 device-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
             >
               <img
                 src="../../assets/deviceSim/pencil.svg"
@@ -1147,7 +1231,11 @@
             </div>
 
             <div
-              class="col-1 device-details-view-edit ng-tns-c119-0 ng-star-inserted"
+              class="
+                col-1
+                device-details-view-edit
+                ng-tns-c119-0 ng-star-inserted
+              "
             >
               <img
                 src="../../assets/deviceSim/pencil.svg"
