--- a/src/app/Modules/settings/services/services.component.html
+++ b/src/app/Modules/settings/services/services.component.html
@@ -16,7 +16,13 @@
         <!--BUTTON FOR ADD NEW SERVICE-->
         <div class="row">
           <mat-card
-            class="add-new-services add-button .button-medium-14 col-12 d-flex my-1"
+            class="
+              add-new-services add-button
+              .button-medium-14
+              col-12
+              d-flex
+              my-1
+            "
             *ngIf="!addNewServiceForm"
           >
             <button
@@ -197,7 +203,13 @@
               Edit
             </div>
             <div
-              class="col-1 card-list-item text-center add-new-service-close close"
+              class="
+                col-1
+                card-list-item
+                text-center
+                add-new-service-close
+                close
+              "
               (click)="editServiceFormClose()"
               *ngIf="editServiceForm"
             >
